# GitKraken-Board-to-Slack-WebHook

./: README.md  main.py  pyproject.toml
.github/: dependabot.yml
