[tool.poetry]
name = "gitkraken-board-to-slack-webhook"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cutandpaste = "^0.4.0"
flask = "^2.0.1"
waitress = "^2.1.0"
Paste = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
